kubernetes/overlays/pugquilt-dev/patches/postgres-netpol-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-netpol
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nextjs
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: photoprism
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: db-backup
      ports:
        - protocol: TCP
          port: 5432
